--- a/styles/variables.less
+++ b/styles/variables.less
@@ -121,6 +121,11 @@
 @popover-max-width:                     360px;
 
 
+// Cluster
+// ---
+@cluster-z-index: 1000;
+
+
 // Focus states
 // ------------------------------
 
